--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,5 @@
-#browser:chrome
+browser:chrome
 docuport: https://beta.docuport.app
 timeouts: 10
 env=beta
-browser=remote-chrome
+#browser=remote-chrome
