--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.loop.test</groupId>
-    <artifactId>cucumber-project-b3</artifactId>
+    <groupId>ext.group3</groupId>
+    <artifactId>Group3_Cucumber_BDD_Framework</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -41,27 +41,26 @@
             </plugin>
 
             <!-- Parallel testing is with help of maven surefire-plugin-->
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-surefire-plugin</artifactId>-->
-<!--                <version>3.3.1</version>-->
-<!--                <configuration>-->
-<!--                    <parallel>methods</parallel>-->
-<!--                    <threadCount>2</threadCount>-->
-<!--                    <testFailureIgnore>true</testFailureIgnore>-->
-<!--                    <useUnlimitedThreads>false</useUnlimitedThreads>-->
-<!--                    <perCoreThreadCount>false</perCoreThreadCount>-->
-<!--                    <includes>-->
-<!--                        <include>**/CukesRunner*.java</include>-->
-<!--                    </includes>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.3.1</version>
+                <configuration>
+                    <parallel>methods</parallel>
+                    <threadCount>2</threadCount>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <useUnlimitedThreads>false</useUnlimitedThreads>
+                    <perCoreThreadCount>false</perCoreThreadCount>
+                    <includes>
+                        <include>**/CukesRunner*.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
 
         </plugins>
     </build>
 
     <dependencies>
-
 
         <dependency>
             <groupId>org.assertj</groupId>
@@ -121,11 +120,6 @@
             <version>4.23.0</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-devtools-v128</artifactId>
-            <version>4.24.0</version>
-        </dependency>
 
 
         <!-- FOR Maven projects that use Cucumber for behavior-driven development-->
@@ -180,6 +174,7 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- For De-serializaition and serialization when working with api-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
