Edit Existing User scenario

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,3 +1,6 @@
-browser:headless
+browser:chrome
 docuport: https://beta.docuport.app
 timeouts: 10
+docu.db.url:jdbc:postgresql://35.222.62.70:5432/postgres
+docu.db.username:tstadmin
+docu.db.password:pamBam-Gagmon-85tmrw
