Andrew's 1st commit for scenario docuportDatabaseClientVerification updates beta.properties, CreateClient.feature, DocuportDatabaseClientVerificationStepDefs.

--- a/src/test/resources/env/beta.properties
+++ b/src/test/resources/env/beta.properties
@@ -3,8 +3,8 @@ base_url=https://beta.docuport.app
 
 #database connection info
 dbUsername=tstadmin
-dbPassword=hoxBam-jaghuj-7cette
-dbUrl=jjdbc:postgresql://34.135.178.209:5432/postgres
+dbPassword=pamBam-Gagmon-85tmrw
+dbUrl=jdbc:postgresql://35.222.62.70:5432/postgres
 
 #each user type
 teacher_email=blyst6@si.edu
