lost of updates

--- a/src/test/resources/env/alpha.properties
+++ b/src/test/resources/env/alpha.properties
@@ -4,7 +4,7 @@ base_url=https://alpha.docuport.app/
 #database connection info
 dbUsername=tstadmin
 dbPassword=hoxBam-jaghuj-7cette
-dbUrl=jjdbc:postgresql://34.135.178.209:5432/postgres
+dbUrl=jdbc:postgresql://34.135.178.209:5432/postgres
 
 #each user type
 teacher_email=blyst6@si.edu
