--- a/configuration.properties
+++ b/configuration.properties
@@ -1,6 +1,10 @@
-browser:chrome
 timeouts: 10
 env=beta
 #browser=remote-chrome
 clientname=Wilmer Frami
 service=Consultancy
+browser=chrome-linux
+#browser=chrome
+#browser=chrome-headless
+#browser:remote-chrome
+#browser=remote-firefox
