--- a/configuration.properties
+++ b/configuration.properties
@@ -3,22 +3,8 @@ env=beta
 #browser=remote-chrome
 clientname=Wilmer Frami
 service=Consultancy
-wikipedia:https://www.wikipedia.org/
-docuport=https://beta.docuport.app
-smartbearssoftware:http://secure.smartbearsoftware.com/samples/testcomplete12/WebOrders/login.aspx
-google.url:https://www.google.com
-guru.url:http://demo.guru99.com/test/upload
-guru.drag:https://demo.guru99.com/test/drag_drop.html
-etsy:https://www.etsy.com
-loop.practice:https://loopcamp.vercel.app/index.html
-dynamicLoading.username:tomsmith
-dynamicLoading.incorrectPassword:incorrect
-smart.bear:http://secure.smartbearsoftware.com/samples/TestComplete12/WebOrders/
-smart.username:Tester
-smart.password:test
-product.url:https://demoblaze.com
-browser=chrome-linux
-#browser=chrome
+#browser=chrome-linux
+browser=chrome
 #browser=chrome-headless
 #browser:remote-chrome
 #browser=remote-firefox
