--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
                 <configuration>
-                    <parallel>methods</parallel>
-                    <threadCount>2</threadCount>
+<!--                    <parallel>methods</parallel>-->
+<!--                    <threadCount>2</threadCount>-->
                     <useUnlimitedThreads>false</useUnlimitedThreads>
                     <perCoreThreadCount>false</perCoreThreadCount>
                     <testFailureIgnore>true</testFailureIgnore>
