added explicit waits

--- a/configuration.properties
+++ b/configuration.properties
@@ -3,9 +3,9 @@ env=beta
 #browser=remote-chrome
 clientname=Wilmer Frami
 service=Consultancy
-#browser=chrome-linux
+browser=chrome-linux
 #browser=chrome
 #browser=chrome-headless
-browser=chrome-headless
+#browser=chrome-headless
 #browser:remote-chrome
 #browser=remote-firefox
