added explicit waits

--- a/configuration.properties
+++ b/configuration.properties
@@ -4,8 +4,8 @@ env=beta
 clientname=Wilmer Frami
 service=Consultancy
 #browser=chrome-linux
-#browser=chrome
-browser=chrome-headless
+browser=chrome
+#browser=chrome-headless
 #browser=chrome-headless
 #browser:remote-chrome
 #browser=remote-firefox
