added explicit waits

--- a/configuration.properties
+++ b/configuration.properties
@@ -3,8 +3,8 @@ env=beta
 #browser=remote-chrome
 clientname=Wilmer Frami
 service=Consultancy
-#browser=chrome-linux
-browser=chrome
+browser=chrome-linux
+#browser=chrome
 #browser=chrome-headless
 #browser=chrome-headless
 #browser:remote-chrome
